--- a/styles/3. Intro Section/style.css
+++ b/styles/3. Intro Section/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
-
 :root {
   --navbarColor: white;
 }
@@ -28,74 +26,12 @@
   top: 0;
   left: 0;
   object-fit: cover;
-  /* opacity: 0.9; */
 }
 
 /* Intro section complete window */
 #intro-section .container {
   width: 100%;
   height: 100%;
-}
-
-/* Intro section navbar */
-.navbar {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-}
-
-.navbar-left {
-  margin-left: 5%;
-}
-
-.navbar-left a {
-  color: var(--navbarColor);
-  text-decoration: none;
-  font-size: 30px;
-  font-weight: 500;
-}
-
-.navbar-right {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 40px 50px;
-}
-
-.navbar-right .navbar-list {
-  margin-right: 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.navbar-right .navbar-list a {
-  color: var(--navbarColor);
-  text-decoration: none;
-  font-size: 20px;
-  font-weight: 400;
-}
-
-.navbar-right .navbar-list hr {
-  margin-top: 3px;
-  width: 0%;
-  height: 2px;
-  border: none;
-  outline: none;
-  border-radius: 10px;
-  background-color: var(--navbarColor);
-  transition: width 0.3s ease-in-out;
-}
-
-.navbar-right .navbar-list.active hr {
-  width: 100%;
-}
-
-.navbar-right .navbar-list:hover hr {
-  width: 100%;
 }
 
 #intro-section .container .overlay {
@@ -109,6 +45,9 @@
 
 /* Intro section info container */
 #intro-section .container .info-container {
+  position: relative;
+  padding-top: 120px;
+  padding-bottom: 40px;
   width: 100%;
   height: 100%;
   display: flex;
@@ -129,7 +68,7 @@
   text-transform: uppercase;
   letter-spacing: 10px;
   font-weight: 500;
-  animation: helloMove 1s linear forwards;
+  animation: helloMove 0.7s linear forwards;
 }
 
 #intro-section .container .info-container .my-info-div span {
@@ -138,30 +77,29 @@
   font-size: 60px;
   margin-right: 20px;
   font-weight: 900;
-  animation: infoMove 1.5s ease-in-out forwards;
+  animation: infoMove 1s ease-in-out forwards;
 }
 
 #intro-section .container .info-container .my-info-div span:nth-child(1) {
-  animation-delay: 0.9s;
+  animation-delay: 0.5s;
 }
 
 #intro-section .container .info-container .my-info-div span:nth-child(2) {
-  animation-delay: 1.3s;
+  animation-delay: 0.9s;
 }
 
 #intro-section .container .info-container .my-info-div span:nth-child(3) {
-  animation-delay: 1.7s;
+  animation-delay: 1.3s;
 }
 
 #intro-section .container .info-container .my-info-div span:nth-child(4) {
-  animation-delay: 2.1s;
+  animation-delay: 1.7s;
 }
 
 #intro-section .container .info-container .quality-div {
   margin-top: 20px;
-  /* position: relative; */
   opacity: 0;
-  animation: fadeInDown 1s ease-in-out 2.5s forwards;
+  animation: fadeInDown 1s ease-in-out 2s forwards;
 }
 
 #intro-section .container .info-container .quality-div p {
@@ -176,9 +114,8 @@
 }
 
 #intro-section .container .info-container .extra-div span {
-  /* overflow: hidden; */
-  margin-left: 25px;
-  margin-right: 25px;
+  /* margin-left: 25px; */
+  margin-right: 50px;
 }
 
 #intro-section .container .info-container .extra-div span hr {
@@ -192,35 +129,24 @@
 }
 
 #intro-section .container .info-container .extra-div span:nth-child(1) hr {
-  animation-delay: 3s;
+  animation-delay: 2.5s;
 }
 #intro-section .container .info-container .extra-div span:nth-child(2) hr {
-  animation-delay: 3.4s;
+  animation-delay: 2.9s;
 }
 #intro-section .container .info-container .extra-div span:nth-child(3) hr {
-  animation-delay: 3.8s;
+  animation-delay: 3.4s;
 }
 #intro-section .container .info-container .extra-div span:nth-child(4) hr {
-  animation-delay: 4.2s;
+  animation-delay: 3.8s;
 }
 
 @keyframes helloMove {
   0% {
     opacity: 0;
     left: 15%;
-    /* letter-spacing: 10px; */
   }
-  /* 40% {
-    opacity: 0.5;
-    left: 7%;
-  }
-  80% {
-    letter-spacing: 20px;
-    opacity: 0.75;
-    left: 0%;
-  } */
   100% {
-    /* letter-spacing: 10px; */
     opacity: 1;
     left: 0%;
   }
@@ -228,16 +154,14 @@
 
 @keyframes infoMove {
   0% {
-    /* bottom: 30%; */
-    font-size: 0px;
+    font-size: 60px;
     opacity: 0;
   }
   50% {
-    font-size: 80px;
+    font-size: 70px;
     opacity: 0.5;
   }
   100% {
-    /* bottom: 0%; */
     font-size: 60px;
     opacity: 1;
   }
@@ -264,5 +188,41 @@
   to {
     transform: translate3d(0, 0, 0);
     opacity: 1;
+  }
+}
+
+@media screen and (max-width: 550px){
+  #intro-section .container .info-container .Hello-div h1 {
+    font-size: 17px;
+  }
+
+  #intro-section .container .info-container .my-info-div span {
+    font-size: 50px;
+    margin-right: 10px;
+    font-weight: 700;
+  }
+
+  #intro-section .container .info-container .quality-div p {
+    font-size: 18px;
+  }
+
+  #intro-section .container .info-container .extra-div span hr {
+    height: 7px;
+    width: 7px;
+  }
+
+  @keyframes infoMove {
+    0% {
+      font-size: 50px;
+      opacity: 0;
+    }
+    50% {
+      font-size: 60px;
+      opacity: 0.5;
+    }
+    100% {
+      font-size: 50px;
+      opacity: 1;
+    }
   }
 }
