--- a/styles/3. Intro Section/style.css
+++ b/styles/3. Intro Section/style.css
@@ -48,13 +48,14 @@
   position: relative;
   padding-top: 120px;
   padding-bottom: 40px;
-  width: 100%;
+  width: 93%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   color: var(--navbarColor);
   margin-left: 5%;
+  margin-right: 5%;
 }
 
 #intro-section .container .info-container .Hello-div {
