--- a/styles/8. Navabar/styles.css
+++ b/styles/8. Navabar/styles.css
@@ -115,7 +115,7 @@
   position: absolute;
   left: 0;
   z-index: 10;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(255, 255, 255, 1);
   animation: dropdownSlide 0.2s ease-in-out forwards;
   
