--- a/styles/5. About Page/styles.css
+++ b/styles/5. About Page/styles.css
@@ -29,7 +29,7 @@ body {
 
 #about-me-section .about-info-container {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -143,7 +143,7 @@ body {
 
 #about-me-section .about-details-div {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   overflow: hidden;
