--- a/styles/5. About Page/styles.css
+++ b/styles/5. About Page/styles.css
@@ -52,7 +52,6 @@ body {
 
 #about-me-section .about-info-container .about-A-background {
   width: 100%;
-  /* min-height: 100vh; */
   height: 100%;
   position: absolute;
   z-index: -1;
@@ -154,28 +153,28 @@ body {
 
 #about-me-section .about-details-div .my-photo-div {
   display: flex;
+  justify-content: center;
   position: relative;
   flex-grow: 1;
-  max-width: 40%;
+  min-width: 40%;
   z-index: -1;
   height: 100%;
   overflow: hidden;
-  justify-content: center;
-  align-items: center;
   animation: aboutPhotoAnimate 3s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
+  align-items: center;
 }
 
 #about-me-section .about-details-div .my-photo-div img {
   object-fit: cover;
-  min-width: 130%;
-  min-height: 130%;
+  min-width: 180%;
+  min-height: 100vh;
   position: relative;
-  bottom: -20%;
+  bottom: -110px;
 }
 
 @keyframes aboutPhotoAnimate {
   0% {
-    bottom: -150%;
+    bottom: -70%;
     left: 25%;
   }
   50% {
@@ -197,12 +196,13 @@ body {
   flex-grow: 2;
   overflow: hidden;
   padding-left: 20px;
+  padding-right: 40px;
 }
 
 #about-me-section .about-details-div .my-information-div .info-top-heading-div {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   visibility: hidden;
-  animation: topHeadingSlideInRight 1s cubic-bezier(0.075, 0.82, 0.165, 1) 1.5s
+  animation: topHeadingSlideInRight 0.8s cubic-bezier(0.075, 0.82, 0.165, 1) 1.7s
     forwards;
 }
 
@@ -211,8 +211,9 @@ body {
   .my-information-div
   .info-top-heading-div
   h1 {
-  font-weight: 200;
-  font-size: 35px;
+  font-weight: 300;
+  font-size: 32px;
+  color: rgba(0, 0, 0, 0.7);
 }
 
 #about-me-section
@@ -228,8 +229,8 @@ body {
   .my-information-div
   .info-middle-heading-div
   span {
-  font-weight: 500;
-  font-size: 49px;
+  font-weight: 400;
+  font-size: 45px;
   margin: 5px 5px 5px 0;
   letter-spacing: 1px;
 }
@@ -238,9 +239,10 @@ body {
   .about-details-div
   .my-information-div
   .info-lower-heading-div {
-  margin-top: 10px;
+  margin-top: 5px;
   opacity: 0;
-  animation: lowerHeadingfadeInDown 0.8s linear 2.2s forwards;
+  color: rgba(0, 0, 0, 0.6);
+  animation: lowerHeadingfadeInDown 0.8s linear 2s forwards;
 }
 
 #about-me-section
@@ -248,9 +250,9 @@ body {
   .my-information-div
   .info-lower-heading-div
   p {
-  margin-bottom: 8px;
-  font-size: 18px;
-  word-spacing: 3px;
+    line-height: 30px;
+  font-size: 22px;
+  word-spacing: 5px;
   font-weight: 400;
 }
 
@@ -273,7 +275,7 @@ body {
   }
 
   60% {
-    transform: skewX(30deg);
+    transform: skewX(10deg);
     opacity: 1;
   }
 
@@ -300,8 +302,67 @@ body {
   }
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 1000px) {
+  #about-me-section
+  .about-details-div
+  .my-information-div
+  .info-top-heading-div
+  h1 {
+    font-size: 25px;
+  }
+
+  #about-me-section
+  .about-details-div
+  .my-information-div
+  .info-middle-heading-div
+  span {
+    font-size: 35px;
+  }
+
+  #about-me-section
+  .about-details-div
+  .my-information-div
+  .info-lower-heading-div
+  p{
+    line-height: 25px;
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 700px) {
   #about-me-section .about-details-div .my-photo-div {
     display: none;
   }
+
+  #about-me-section .about-details-div .my-information-div {
+    margin: 120px 5%;
+    padding: 0;
+    overflow: hidden;
+  }
+  #about-me-section
+  .about-details-div
+  .my-information-div
+  .info-top-heading-div
+  h1 {
+    font-size: 22px;
+  }
+
+  #about-me-section
+  .about-details-div
+  .my-information-div
+  .info-middle-heading-div
+  span {
+    font-size: 30px;
+  }
+
+  #about-me-section
+  .about-details-div
+  .my-information-div
+  .info-lower-heading-div
+  p{
+    line-height: 22px;
+    font-size: 18px;
+  }
+
 }
+
