--- a/styles/7. Hobbies Page/styles.css
+++ b/styles/7. Hobbies Page/styles.css
@@ -9,6 +9,7 @@
   #hobbies-section .hobbies-info-div {
     width: 100%;
     min-height: 100vh;
+    position: absolute;
     background-color: rgb(250, 250, 250);
     overflow: hidden;
   }
@@ -20,6 +21,9 @@
   #hobbies-section .hobbies-info-div .hobbies-info-container {
     width: 100%;
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: black;
     overflow: hidden;
   }
@@ -34,20 +38,24 @@
   }
 
   #hobbies-section .hobbies-info-div .hobbies-info-container .hobbies-dust-background video{
+    position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     object-fit: cover;
+    top: 0;
+    left: 0;
     transform: scaleX(-1);
   }
 
   #hobbies-section .hobbies-info-container .my-hobbies-h1
   {
     width: 100%;
-    height: 100%;
-    position: relative;
-    display: flex;
+    text-align: center;
+    /* min-height: 100vh; */
+    /* position: relative; */
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     overflow: hidden;
   }
   
@@ -72,8 +80,8 @@
   #hobbies-section .scroll-click {
     position: absolute;
     left: 50%;
-    bottom: 30px;
     cursor: pointer;
+    bottom: 30px;
   }
   
   #hobbies-section .scroll-click i {
