--- a/styles/8. Navbar/styles.css
+++ b/styles/8. Navbar/styles.css
@@ -112,7 +112,7 @@
 
 .mobile-dropdown-div {
   display: none;
-  position: absolute;
+  position: fixed;
   left: 0;
   z-index: 10;
   height: 100vh;
