--- a/styles/6. Skills Page/styles.css
+++ b/styles/6. Skills Page/styles.css
@@ -26,6 +26,7 @@
 }
 
 #skills-section .skills-info-div .skills-info-container {
+  position: absolute;
   width: 100%;
   min-height: 100vh;
   display: flex;
